add keynote presentation

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <h2>4. Update the Rakefile in your favorite editor</h2>
-    This file will be translated into the gem's gemspec.  Update the summary, description, email and authors with your own information.<br/>  <span class="red"><b>NOTE:</b> Jeweler will not generate your gemspec if you have TODO or FIXME in the description and summary, so you will need to change these attributes.</span>
+    This file will be translated into the gem's gemspec.  Update the summary, description, email and authors with your own information.<br/><br/>  <span class="red"><b>NOTE:</b> Jeweler will not generate your gemspec if you have TODO or FIXME in the description and summary, so you will need to change these attributes.</span>
     <script src="https://gist.github.com/1230996.js?file=Rakefile"></script>
 
     <h2>5. create a VERSION file</h2>
